[package]
name = "rfile"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic logging utilities
# Rocket sets up its own logger so we just need the log crate to talk to its global hook
log = "0.4.17"

# some libs for easy async and threading
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["full"] }
rayon = "1.5.3"

# file change events
notify = "4.0.17"

#http related stuff
rocket = "0.5.0-rc.2"
mime = "0.3.16"

# database
rusqlite = "0.28.0"

# crypt stuff
#ring = { version = "0.16.20", features = ["std"] }
data-encoding = "2.3.2"
blake3 = { version = "1.3.1", features = ["std", "rayon"] }

# compression
flate2 = { version = "1.0.24" }
tar = "0.4.38"

# and some stuff I don't know why it isn't in std
rand = { version = "0.8.5", features = ["std", "alloc", "getrandom", "std_rng", "log", "nightly", "simd_support"] }
lazy_static = "1.4.0"
regex = "1.5.6"
chrono = "0.4.22"
memmap2 = "0.5.7"